tests/reference/asr_preprocess-preprocessor10-6279d1f.stderr
C preprocessor error: function-like macro invocation must have argument list
  --> tests/preprocessor10.f90:55:14
   |
55 |     defined(Y) || defined(Z)
   |              ^ 
